--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
     "eject": "react-scripts eject",
-    "lint": "eslint ./ --ignore-path .gitignore"
+    "lint": "eslint ./ --ignore-path .gitignore",
+    "cypress": "cypress open",
+    "cypress:all": "cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,10 +42,12 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^6.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
